--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "videoshow": "^0.1.12"
   },
   "devDependencies": {
@@ -81,6 +82,7 @@
     "@types/jasmine": "^3.6.4",
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
