--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "node-create-video-from-images",
   "version": "0.0.0",
   "scripts": {
-    "build": "ts-node build.ts",
     "lint": "eslint . --ext .ts",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
@@ -12,17 +11,11 @@
     "watch": [
       "src"
     ],
-    "ext": "ts, html",
+    "ext": "ts",
     "ignore": [
       "src/public"
     ],
     "exec": "ts-node -r tsconfig-paths/register ./src"
-  },
-  "_moduleAliases": {
-    "@daos": "dist/daos",
-    "@entities": "dist/entities",
-    "@shared": "dist/shared",
-    "@server": "dist/server"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -55,10 +48,10 @@
     }
   },
   "eslintIgnore": [
-    "src/public/",
-    "build.ts"
+    "src/public/"
   ],
   "dependencies": {
+    "chalk": "^4.1.0",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
